--- a/grid/style.css
+++ b/grid/style.css
@@ -9,61 +9,56 @@
     height: 100vh;
     display: grid;
     background-color: blue;
-    
     padding: 20PX;
-
-
-    grid-template-areas: "a1 a1 a1 a1"
-                         "a2 a3 a4 a4"
-                         "a2 a5 a6 a7"
-                         "a8 a8 a8 a8";
-                         
-
-    grid-gap: 10px;                     
-   
+    grid-template-columns:1fr 1fr 1fr;
+    grid-template-rows:repeat(5fr) ;
+    grid-gap: 10px;                
+    grid-template-areas:"a1 a1 a1" 
+                        "a2 a3 a4 "
+                        "a2 a3 a4"
+                        "a5 a6 a7"
+                        "a8 a8 a8 " ;     
                         
 }
-.lista{
-    font-size: 2rem;
-    display: flex;
-    color: white;
-    justify-content: space-around;
-    align-items: center;
-   
-    
-    
-    
-    
-    
-    
-}
-
-
 
 
 .r1{
     background-color: turquoise;
+    
+   
 }
 .r2{
     background-color: tomato;
+    
 }
 .r3{
     background-color: yellowgreen;
+    
 }
 .r4{
     background-color: violet;
+    
 }
 .r5{
     background-color: teal;
+    
+    
 }
 .r6{
+    height: 50%;
+    width: 50%;
     background-color: tan;
+    align-self: center;
+    justify-self: center;
 }
 .r7{
     background-color: yellow;
+    
+
 }
 .r8{
     background-color: brown;
+    
 }
 
 .item1{
@@ -90,7 +85,5 @@
 .item8{
     grid-area: a8;
 }
-
-
 
 
